feat: implement all frontend
